# simple_server_Spotify

./: .gitignore  .gitignore.swp  README.md  partition_table.csv  platformio.ini  sdkconfig  sdkconfig.old  simple_server_Spotify.code-workspace
Data/: SecPage.html  Successfull.html  UNSuccessfull.html
components/: CMakeLists.txt  OauthAPICall.h  OauthHttpLocalServer.c  README.md  SpotifyInterface.c  authorization.c
components/GPIO/: CMakeLists.txt  Setup_GPIO.c
components/GPIO/include/: Setup_GPIO.h
components/GUI/: CMakeLists.txt  GUIEvent.c  GUIEvent.h  LVGLBottom.c  LVGLBottom.h  Print_needed_Cmake.sh  lvglGui.c
components/GUI/custom/: custom.c  custom.h  lv_conf_ext.h
components/GUI/images/: images_md5.json
components/GUI/include/: LVGLInterface.h  Typedef.h  lvglGui.h  lvglTimer.h
components/GUI/lib/: GUITypedef.h  LVGLBottom.h  MatterScreen.h  MenuScreen.h  SpotifyScreen.h  Typedef.h
components/GUI/screens/: MatterScreen.c  MenuScreen.c  SpotifyScreen.c
components/GUI/srcs/: lvglGui.c  lvglTimer.c
components/GlobalInit/: CMakeLists.txt  GlobalInit.c
components/GlobalInit/include/: GlobalInit.h
components/HttpsComponent/: CMakeLists.txt  HttpsRequests.c  time_sync.c  time_sync.h
components/HttpsComponent/include/: HttpsRequests.h  time_sync.h
components/HttpsCoponent_/: CMakeLists.txt  HttpsRequest_.c
components/HttpsCoponent_/include/: HttpsRequest_.h
components/OAuth2.0/: Authorization.c  CMakeLists.txt  OauthAPICall.c  OauthAPICall.h  OauthHttpLocalServer.c  OauthHttpLocalServer.h  authorization.c  authorization.h
components/OAuth2.0/include/: Authorization.h  OauthAPICall.h  OauthHttpLocalServer.h  OauthTypedef.h  authorization.h
components/Setup_GPIO/: CMakeLists.txt  Setup_GPIO.c
components/Setup_GPIO/include/: Setup_GPIO.h
components/SpotifyAuthorization/: CMakeLists.txt  JsonExtraction.c  MakeSpotifyRequest.c  SpotifyAuthorization.c
components/SpotifyAuthorization/include/: JsonExtraction.h  MakeSpotifyRequest.h  SpotifyAuthorization.h
components/SpotifyInterface/: CMakeLists.txt  JpegDecode.c  JsonExtraction.c  MakeSpotifyRequest.c  README.md  SpotifyAPICall.c  SpotifyEventHandler.c  SpotifyHttpLocalServer.c  SpotifyInterface structure.drawio  SpotifyInterface.c  SpotifyInterface.md  SpotifyMakeRequest.c  Untitled Diagram.drawio
components/SpotifyInterface/include/: .gitignore  JpegDecode.h  JsonExtraction.h  MakeSpotifyRequest.h  SpotifyAPICall.h  SpotifyHttpLocalServer.h  SpotifyInterface.h  SpotifyTypedef.h  SpotifyWebAppInfo.h  SpotifyWebAppInfo_sample.h
components/SpotifyInterface/lib/: JsonExtraction.h  MakeSpotifyRequest.h  SpotifyAPICall.h  SpotifyEventHandler.h  SpotifyHttpLocalServer.h  SpotifyMakeRequest.h  SpotifyTypedef.h
components/WiFiComponent/: CMakeLists.txt  HttpLocalServer.c  HttpLocalServer.h  WiFiConfig.c  WiFiConfig.h  WiFiConfig_.c
components/WiFiComponent/include/: WiFiConfig.h  WiFiConfig_.h
components/lvgl/demos/music/: lv_demo_music.c
components/lvgl/src/core/: lv_theme.h
components/lvglGui/: CMakeLists.txt  README.md  image_test.h  lvglGui.c
components/lvglGui/include/: LVGLInterface.h  lvglGui.h
components/lvgl_esp32_drivers/: CMakeLists.txt  lvgl_helpers.c  lvgl_helpers.h  lvgl_spi_conf.h
components/lvgl_esp32_drivers/lvgl_tft/: Kconfig  disp_driver.c  disp_driver.h  disp_spi.c  rm67162.c  rm67162.h  rm67162Lilygo.c  rm67162Lilygo.h
components/nvsFlash/: CMakeLists.txt  SpiffsManger.c  nvsFlash.c
components/nvsFlash/include/: SpiffsManger.h  nvsFlash.h
lib/: TouchControllerWS.cpp  TouchControllerWS.h
lib/TZ/: TZ.h
lib/set/: settings.h
lib/spot/: SpotifyClient.cpp  SpotifyClient.h
main/: CMakeLists.txt  GlobalInit.c  idf_component.yml  main.c
main/include/: GlobalInit.h  main.h
src/: main.cpp  sopt.cpp
